fixed overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -128,5 +128,5 @@ a:hover {
 }
 
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 0px;
 }
